--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/src/styles/components/layout/_panel.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/src/styles/components/layout/_panel.scss
@@ -16,14 +16,16 @@
 
 .panel-header-link {
 	z-index: 0;
+
 	&:focus {
 		z-index: 0;
 	}
+
 	h5 {
 		z-index: 0;
 	}
 }
 
 .header-container {
-	z-index: 999;
+	z-index: 99;
 }
